--- a/index.html
+++ b/index.html
@@ -37,7 +37,21 @@
         -webkit-backdrop-filter: blur(12px);
         border: 1px solid rgba(255, 255, 255, 0.1);
       }
-      /* VK specific padding if needed, usually handled by viewport-fit=cover */
+      
+      @keyframes slideInTop {
+        from { transform: translateY(-20px); opacity: 0; }
+        to { transform: translateY(0); opacity: 1; }
+      }
+      .animate-slide-in-top {
+        animation: slideInTop 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+      }
+      @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      .animate-fade-in {
+        animation: fadeIn 0.3s ease-out forwards;
+      }
     </style>
   <script type="importmap">
 {
